Fixed on mobile.

--- a/app/assets/stylesheets/frontend_pieces.css.scss
+++ b/app/assets/stylesheets/frontend_pieces.css.scss
@@ -641,6 +641,12 @@ figure.default {
 .article-social + figure.left,
 .article-social + figure.default {
   margin-left: modular-scale(2, 3/4*$modular-scale-base);
+  @include media($tablet) {
+    margin-left: 0;
+  }
+  @include media($mobile) {
+    margin-left: 0;
+  }
 }
 
 
